--- a/modules/chatUserInterface/src/main/resources/content/Language.properties
+++ b/modules/chatUserInterface/src/main/resources/content/Language.properties
@@ -1,4 +1,4 @@
-javax.portlet.display-name.chatuserinterface=ChatUserInterface
-javax.portlet.keywords.chatuserinterface=ChatUserInterface
-javax.portlet.short-title.chatuserinterface=ChatUserInterface
-javax.portlet.title.chatuserinterface=ChatUserInterface
+javax.portlet.display-name.chatuserinterface=Liferay Live Chat
+javax.portlet.keywords.chatuserinterface=Liferay Live Chat
+javax.portlet.short-title.chatuserinterface=Liferay Live Chat
+javax.portlet.title.chatuserinterface=Liferay Live Chat
